# FastAPI_Blog

./: .gitignore  auth.py  blog.db  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py
routers/: posts.py  users.py
static/js/: auth.js  utils.js
templates/: error.html  home.html  layout.html  login.html  post.html  register.html  user_posts.html
